; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/x25/extr_x25_route.c___x25_remove_route.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/x25/extr_x25_route.c___x25_remove_route.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.x25_route = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.x25_route*)* @__x25_remove_route to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__x25_remove_route(%struct.x25_route* %0) #0 {
  %2 = alloca %struct.x25_route*, align 8
  store %struct.x25_route* %0, %struct.x25_route** %2, align 8
  %3 = load %struct.x25_route*, %struct.x25_route** %2, align 8
  %4 = getelementptr inbounds %struct.x25_route, %struct.x25_route* %3, i32 0, i32 0
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %14

8:                                                ; preds = %1
  %9 = load %struct.x25_route*, %struct.x25_route** %2, align 8
  %10 = getelementptr inbounds %struct.x25_route, %struct.x25_route* %9, i32 0, i32 0
  %11 = call i32 @list_del(%struct.TYPE_2__* %10)
  %12 = load %struct.x25_route*, %struct.x25_route** %2, align 8
  %13 = call i32 @x25_route_put(%struct.x25_route* %12)
  br label %14

14:                                               ; preds = %8, %1
  ret void
}

declare dso_local i32 @list_del(%struct.TYPE_2__*) #1

declare dso_local i32 @x25_route_put(%struct.x25_route*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
